--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,8 +1,19 @@
 {{ if eq .chezmoi.os "linux" -}}
-#!/bin/sh
-sudo apt install ripgrep
+#!/bin/bash
+sudo apt install ripgrep tmux
 
+## Install Oh my tmux!
 cd
 git clone https://github.com/gpakosz/.tmux.conf
 ln -s -f .tmux/.tmux.conf
+
+## Install NVM
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.4/install.sh | bash
+
+source ~/.nvm/nvm.sh
+source ~/.profile
+source ~/.bashrc
+
+nvm install node
+
 {{ end -}}
