--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,6 +1,17 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
-sudo apt install ripgrep tmux
+
+type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
+curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+&& sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+&& echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+
+sudo apt update 
+sudo apt install ripgrep tmux gh -y
+
+## Config GitHub CLI
+gh auth login
+gh extension install github/gh-copilot
 
 ## Install Oh my tmux!
 cd
