fix: set node 20 as default

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -25,6 +25,8 @@ source ~/.nvm/nvm.sh
 source ~/.profile
 source ~/.bashrc
 
-nvm install node
+nvm install lts/hydrogen # node 18
+nvm install lts/iron # node 20
+nvm alias default lts/iron
 
 {{ end -}}
