remove copilot setup and plugins

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -10,8 +10,8 @@ sudo apt update
 sudo apt install ripgrep tmux gh -y
 
 ## Config GitHub CLI
-gh auth login
-gh extension install github/gh-copilot
+## gh auth login
+## gh extension install github/gh-copilot
 
 ## Install Oh my tmux!
 cd
