--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -7,10 +7,12 @@ curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo 
 && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
 
 sudo apt update 
-sudo apt install ripgrep tmux gh -y
+sudo apt install ripgrep tmux fzf gh -y
+
+curl -fsSL https://get.pnpm.io/install.sh | sh -
 
 ## Config GitHub CLI
-gh auth login
+## gh auth login
 ## gh extension install github/gh-copilot
 
 ## Install Oh my tmux!
