--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -17,7 +17,7 @@ curl -fsSL https://get.pnpm.io/install.sh | sh -
 
 ## Install Oh my tmux!
 cd
-git clone https://github.com/gpakosz/.tmux.conf
+git clone https://github.com/gpakosz/.tmux
 ln -s -f .tmux/.tmux.conf
 
 ## Install NVM
