--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -7,7 +7,7 @@ curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo 
 && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
 
 sudo apt update 
-sudo apt install ripgrep tmux fzf gh build-essential -y
+sudo apt install ripgrep tmux fzf gh jq build-essential -y
 sudo snap install nvim --classic
 
 curl -fsSL https://get.pnpm.io/install.sh | sh -
