--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -10,7 +10,7 @@ sudo apt update
 sudo apt install ripgrep tmux fzf gh jq build-essential zsh -y
 sudo snap install nvim --classic
 
-curl -fsSL https://get.pnpm.io/install.sh | sh -
+## curl -fsSL https://get.pnpm.io/install.sh | sh -
 
 ## Config GitHub CLI
 ## gh auth login
